--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <div class="image-grid">
-  <img src="images\thumbnails\shyInTree.jpg" alt="TreeShy">
+  <img src="\shyInTree.jpg" alt="TreeShy">
   <img src="images\thumbnails\Josie8.jpg" alt="">                     
   <img src="images\thumbnails\Josie7.jpg" alt="">
   <img class="hat" src="images\thumbnails\headshot.jpg" alt="">
